# AdventOfCode

./: .gitignore  README.md  clean_all.sh  compile_all_solutions.sh  run_all_solutions.sh
AOC-2015/: CMakeLists.txt  conanfile.txt
AOC-2015/Day1-p1/: solution.cpp
AOC-2015/Day1-p2/: solution.cpp
AOC-2015/Day1/p1/: solution.cpp
AOC-2015/Day10-p1/: solution.cpp
AOC-2015/Day10-p2/: solution.cpp
AOC-2015/Day12-p1/: solution.cpp
AOC-2015/Day12-p2/: solution.cpp
AOC-2015/Day2-p1/: solution.cpp
AOC-2015/Day2-p2/: solution.cpp
AOC-2015/Day3-p1/: solution.cpp
AOC-2015/Day3-p2/: solution.cpp
AOC-2015/Day4-p1/: solution.cpp
AOC-2015/Day4-p2/: solution.cpp
AOC-2015/Day5-p1/: solution.cpp
AOC-2015/Day5-p2/: solution.cpp
AOC-2015/Day8-p1/: solution.cpp
AOC-2015/Day8-p2/: solution.cpp
AOC-2016/: CMakeLists.txt  conanfile.txt
AOC-2016/Day1-p1/: solution.cpp
AOC-2016/Day1-p2/: solution.cpp
AOC-2016/Day1/p2/: solution.cpp
AOC-2016/Day2-p1/: solution.cpp
AOC-2016/Day2-p2/: solution.cpp
AOC-2016/Day3-p1/: solution.cpp
AOC-2016/Day3-p2/: solution.cpp
AOC-2016/Day3/p1/: solution.cpp
AOC-2016/Day4-p1/: solution.cpp
AOC-2016/Day4-p2/: solution.cpp
AOC-2016/Day4/p1/: solution.cpp
AOC-2016/Day5-p1/: solution.cpp
AOC-2016/Day5-p2/: solution.cpp
AOC-2022/: CMakeLists.txt  conanfile.txt
AOC-2022/Day1-p1/: solution.cpp
AOC-2022/Day1-p2/: solution.cpp
AOC-2022/Day1/p1/: solution.cpp
AOC-2022/Day1/p2/: solution.cpp
AOC-2022/Day10-p2/: solution.cpp
AOC-2022/Day10/p1/: solution.cpp
AOC-2022/Day10/p2/: solution.cpp
AOC-2022/Day11/: input.txt
AOC-2022/Day11-p2/: input.txt  solution.cpp
AOC-2022/Day11/p1/: solution.cpp
AOC-2022/Day12-p2/: solution.cpp
AOC-2022/Day12/p1/: solution.cpp
AOC-2022/Day13/p1/: solution.cpp
AOC-2022/Day13/p2/: solution.cpp
AOC-2022/Day14-p1/: solution.cpp
AOC-2022/Day14-p2/: solution.cpp
AOC-2022/Day15/p1/: solution.cpp
AOC-2022/Day15/p2/: solution.cpp
AOC-2022/Day2-p1/: solution.cpp
AOC-2022/Day2-p2/: solution.cpp
AOC-2022/Day2/p1/: solution.cpp
AOC-2022/Day2/p2/: solution.cpp
AOC-2022/Day3-p1/: solution.cpp
AOC-2022/Day3-p2/: solution.cpp
AOC-2022/Day3/p1/: solution.cpp
AOC-2022/Day4-p1/: solution.cpp
AOC-2022/Day4-p2/: solution.cpp
AOC-2022/Day4/p1/: solution.cpp
AOC-2022/Day4/p2/: solution.cpp
AOC-2022/Day5-p1/: solution.cpp
AOC-2022/Day5/p1/: solution.cpp
AOC-2022/Day5/p2/: solution.cpp
AOC-2022/Day6-p1/: solution.cpp
AOC-2022/Day6/p2/: solution.cpp
AOC-2022/Day7-p1/: solution.cpp
AOC-2022/Day7-p2/: solution.cpp
AOC-2022/Day7/p1/: solution.cpp
AOC-2022/Day8-p2/: solution.cpp
AOC-2022/Day8/p1/: solution.cpp
AOC-2022/Day9-p1/: solution.cpp
AOC-2022/Day9-p2/: solution.cpp
(+7 files in other folders)
